--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Numberless",
+  "name": "numberless",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,8 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native-stack": "^6.9.12",
     "react": "18.2.0",
-    "react-native": "0.71.7"
+    "react-native": "0.71.7",
+    "react-native-safe-area-context": "^4.5.2",
+    "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.9.0",
+    "react-native-svg-transformer": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
