--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.9.0",
@@ -29,10 +30,10 @@
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
-    "jest": "^29.2.1",
+    "jest": "^29.5.0",
+    "jest-react-native": "^18.0.0",
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.4.1",
-    "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
   "jest": {
