Add the ability to recieve notifications and data through FCM

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -43,6 +43,9 @@ target 'Numberless' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
   pod 'RNFS', :path => '../node_modules/react-native-fs'
+  use_frameworks! :linkage => :static
+  $RNFirebaseAsStaticFramework = true
+
 
 
   target 'NumberlessTests' do
