--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: "com.android.application"
+apply plugin: "com.google.gms.google-services"
 apply plugin: "com.facebook.react"
+apply plugin: "com.android.application"
 
 import com.android.build.OutputFile
 
@@ -165,6 +167,10 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    // Dependencies for firebase cloud messaging, FCM
+    implementation("com.google.firebase:firebase-bom:32.0.0")
+    implementation("com.google.firebase:firebase-messaging-ktx")
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
