--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-camera-kit": "^13.0.0",
     "react-native-fs": "^2.20.0",
     "react-native-permissions": "^3.8.0",
     "react-native-safe-area-context": "^4.5.2",
@@ -29,13 +30,14 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native-community/cli": "^11.3.1",
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
-    "eslint": "^8.19.0",
+    "eslint": "^8.42.0",
     "jest": "^29.5.0",
     "jest-react-native": "^18.0.0",
     "metro-react-native-babel-preset": "0.73.9",
