--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-camera-kit": "^13.0.0",
     "react-native-fs": "^2.20.0",
     "react-native-permissions": "^3.8.0",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.9.0",
