--- a/app.json
+++ b/app.json
@@ -1,4 +1,9 @@
 {
   "name": "Numberless",
-  "displayName": "Bridge"
+  "displayName": "Bridge",
+  "extra": {
+    "eas": {
+      "projectId": "903c910a-1c80-4bfe-94d8-316e58eb174a"
+    }
+  }
 }
