--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^7.8.0",
     "@numberless/react-native-numberless-crypto": "^0.0.2",
+    "@react-native-clipboard/clipboard": "^1.11.2",
     "@react-native-firebase/app": "^17.5.0",
     "@react-native-firebase/messaging": "^17.5.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@reduxjs/toolkit": "^1.9.5",
+    "async-mutex": "^0.4.0",
     "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.71.7",
@@ -25,7 +29,8 @@
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.9.0",
-    "react-native-svg-transformer": "^1.0.0"
+    "react-native-svg-transformer": "^1.0.0",
+    "react-redux": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
