--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.71.7",
     "react-native-camera-kit": "^13.0.0",
     "react-native-fs": "^2.20.0",
+    "react-native-image-picker": "^5.6.0",
     "react-native-permissions": "^3.8.0",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-safe-area-context": "^4.5.2",
