--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,15 +9,18 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Not on UAT
-      - run: grep -i "uat.numberless.tech" src/configs/api.ts
-      
-      - name: Lint with eslint
+        run: grep -i "uat.numberless.tech" src/configs/api.ts
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
+          
+      - name: Install dependencies
         shell: bash
-          env:
-            NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          run: yarn install
-          run: eslint --quiet .
-      
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: yarn install
+        
+      - name: Lint with eslint
+        run: eslint --quiet .
