Get ci to run on pushes to open PRs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,11 @@
 name: PR Validation
 
-on: [pull_request]
+on:
+  pull_request:
+    types: [opened, synchronize, reopened]
+  push:
+    branches:
+      - 'refs/pull/*/head'
 
 jobs:
   validate-cleanliness:
