--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,7 @@ jobs:
         shell: bash
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: echo $NPM_TOKEN
-        # run: yarn install
+        run: yarn install
         
       - name: Lint with eslint
         run: eslint --quiet .
