--- a/android/gradle/wrapper/gradle-wrapper.properties
+++ b/android/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,7 @@
+#Wed Feb 26 13:58:50 EST 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+# distributionUrl=https\://services.gradle.org/distributions/gradle-8.9-bin.zip
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.0.1-all.zip
 networkTimeout=10000
 zipStoreBase=GRADLE_USER_HOME
