Add ringing in all states on an incoming call in Android (#5)
* Add notification sound to android call style notification

* Add missing import to call helper module

* Make android callstyle notification ring

* Cancel ringtone when call is answered or declined

* Launch full screen activity from the callstyle notification when locked

* Manage answering and declining from the Call activity

* Styled the call activity properly

* Removed unused imports

* More flags to allow unlocking of device when answered

* Require unlocking the phone to accept a call

* Finish call activity after the ring timeout

* Removed unused imports

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -146,6 +146,9 @@ android {
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
+    buildFeatures {
+        viewBinding true
+    }
 
     // applicationVariants are e.g. debug, release
     applicationVariants.all { variant ->
@@ -169,6 +172,8 @@ dependencies {
     implementation("com.facebook.react:react-android")
 
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.0.0")
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.12.0'
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
