Add password based file encryption and decryption helpers (#81)
    Improve make_promise in native code to propagate rejections more reliably
    Add asynchronous native methods pbEncrypt and pbDecrypt
    Use PBKDF2 for key derivation
    Encrypt a file and metadata into a singular destination file with metadata for salts and ivs
    Add helper to snapshot the database

--- a/android/app/src/main/jni/CMakeLists.txt
+++ b/android/app/src/main/jni/CMakeLists.txt
@@ -19,6 +19,7 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
   ../../../../../shared/src/ed25519.cpp
   ../../../../../shared/src/x25519.cpp
   ../../../../../shared/src/aes256.cpp
+  ../../../../../shared/src/pbencrypt.cpp
 )
 
 # Define where CMake can find the additional header files. We need to crawl back the jni, main, src, app, android folders
