--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@react-navigation/native": "^7.1.4",
     "@react-navigation/native-stack": "^7.3.8",
     "@reduxjs/toolkit": "^1.9.5",
+    "@sentry/react-native": "^6.11.0",
     "async-mutex": "^0.4.0",
     "axios": "^1.4.0",
     "deprecated-react-native-prop-types": "^5.0.0",
