Improve call management (#164)
* Begin setting up CallHelperModule

* Fix performAnswerCallAction

* Implement performEndCallAction

* Implement startOutgoingCall

* Fix accept and reject call

* Improve end_call

* Implement listeners for accept and end

* Implement android calling notification

* Add some documentation for NativeCallKelperModule.kt

* Implement start and end aurdio services, getAudioRoutes, setAudioRoutes for Android

* Revery + button on home screen

* Patch connection issue

* Implement toggling speaker

* Remove CallKeep dependency

* Clean up empty useEffect

* Strip CallKeep and add logs to debug native muting

* Move towards event emitters

* Move to PortCallHelper to objective-x++

* Remove missing methods

* Set up singleton CallHelperModule to synchronize between JS and native instances of the module.

* Properly connect listeners

* Delete legacy CallHelperModule for Android

* Get linter to not be mad at me anymore

* Set up foreground service during a call in Android

* Remove TODOs that were already implemented

* Remove CallKeep's service from the manifest

* Stop using magic numbers for foreground service notification

* Clean up some comments

* Remove incorrect comment in Home.tsx

* ..

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -154,19 +154,13 @@
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-        </activity> <!-- CallKeep shenanigans here -->
+        </activity> 
+        <!-- Service for managing audio during calls -->
         <service
-            android:name="io.wazo.callkeep.VoiceConnectionService"
-            android:exported="false"
-            android:foregroundServiceType="camera|microphone"
-            android:label="Wazo"
-            android:permission="android.permission.BIND_TELECOM_CONNECTION_SERVICE">
-            <intent-filter>
-                <action android:name="android.telecom.ConnectionService" />
+            android:name=".CallAudioService"
+            android:foregroundServiceType="microphone"
+            android:exported="false" />
 
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </service>
     </application>
 
 </manifest>
