[FEAT] Add full database cloud backups for iOS and Android (#175)
* Add pbencrypt to the build system

* Improve thread safety of make_promise

* Resolve errors with backup encryption

* Patch encoding issues

* Fixed salt logic for password based backups

* Revert changes to profile screen

* Clean up to meet linting requirements

* Get app to build

* Prune implementations in app/build.gradle

* Set up cloud storage based on platform

* Create upload and share methods.

* Add method to download a backup

* Implement download and restore backup

* Add skeleton to help test backup creation

* Set up framework to test restoring from backup

* Navigate to HomeTab once account is restored

* Create continue with google screen

* Imprrove styling of restore backup screen

* Add missing files

* Add RestoreBackup

* Fix back up screens UI (#96)

* fixed create backup screen ui

* fixed styling for other backup related screens

* fixed crashing issue (#172)

* Fix issues with unsynced backups and multiple versions on iOS (#174)

* Fix issues with unsynced backups and multiple versions on iOS

* Make linter less mad

* Fix cloud based backupsg (#191)

* improve user feedback on backup flow

* Merge branch 'main' into ani/restore-local-backup

* Add GoogleSignInModule to native package list on Android

* Fix pbencrypt

* Fix cloud backups

* Appease linter

---------

Co-authored-by: Aniruddh <aniruddh@mail.numberless.tech>

* Add create backup success feedback (#198)

* added feedback on successful backup upload

* fixed local backups

* fixed close db issue

---------

Co-authored-by: anibalu <39203918+anibalu@users.noreply.github.com>
Co-authored-by: Aniruddh <aniruddh@mail.numberless.tech>

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -115,12 +115,15 @@ android {
         versionName "1.15.0"
     }
    packagingOptions {
-      pickFirst 'lib/x86/libc++_shared.so'
-       pickFirst 'lib/x86_64/libjsc.so'
-       pickFirst 'lib/arm64-v8a/libjsc.so'
-      pickFirst 'lib/arm64-v8a/libc++_shared.so'
-      pickFirst 'lib/x86_64/libc++_shared.so'
-      pickFirst 'lib/armeabi-v7a/libc++_shared.so'
+        pickFirst 'lib/x86/libc++_shared.so'
+        pickFirst 'lib/x86_64/libjsc.so'
+        pickFirst 'lib/arm64-v8a/libjsc.so'
+        pickFirst 'lib/arm64-v8a/libc++_shared.so'
+        pickFirst 'lib/x86_64/libc++_shared.so'
+        pickFirst 'lib/armeabi-v7a/libc++_shared.so'
+        pickFirst 'META-INF/DEPENDENCIES' // This is because of a conflict between http clients being poorly packaged
+
+
     }
 
     splits {
@@ -202,6 +205,11 @@ dependencies {
     // Dependencies for firebase cloud messaging, FCM
     implementation("com.google.firebase:firebase-bom:32.0.0")
     implementation("com.google.firebase:firebase-messaging-ktx")
+    // Dependencies for google auth apis
+    implementation "com.google.android.gms:play-services-auth:20.5.0"
+    implementation("com.google.apis:google-api-services-drive:v3-rev20230822-2.0.0")
+    implementation("com.google.api-client:google-api-client-android:2.2.0")
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 
 apply plugin: "com.google.gms.google-services"
