--- a/ios/Port/Port.entitlements
+++ b/ios/Port/Port.entitlements
@@ -8,6 +8,18 @@
 	<array>
 		<string>applinks:porting.me</string>
 	</array>
+	<key>com.apple.developer.icloud-container-identifiers</key>
+	<array>
+		<string>iCloud.tech.numberless.port</string>
+	</array>
+	<key>com.apple.developer.icloud-services</key>
+	<array>
+		<string>CloudDocuments</string>
+	</array>
+	<key>com.apple.developer.ubiquity-container-identifiers</key>
+	<array>
+		<string>iCloud.tech.numberless.port</string>
+	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
 		<string>group.tech.numberless.port</string>
