--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-blob-util": "^0.19.6",
     "react-native-bootsplash": "^6.3.4",
     "react-native-camera-kit": "^14.2.0",
+    "react-native-cloud-storage": "^2.2.2",
     "react-native-compressor": "^1.11.0",
     "react-native-contacts": "^8.0.4",
     "react-native-create-thumbnail": "^2.1.1",
