--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@bam.tech/react-native-image-resizer": "^3.0.11",
+    "@gorhom/bottom-sheet": "^5",
     "@likashefqet/react-native-image-zoom": "^3.0.0",
     "@notifee/react-native": "^7.8.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
