--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "port",
   "version": "0.0.1",
-  "private": true,
+  "private": false,
+  "license": "Apache-2.0",
+  "description": "A consent-based communication app that uses no persistent identifiers",
+  "keywords": ["numberless", "port", "communication", "messaging", "mobile",  "consent", "privacy", "secure", "identifierless", "react-native"],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Numberless-Inc/port-mobile"
+  },
+  "homepage": "https://portmessenger.com",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
